# task_scheduler

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: ConsoleLogger.h  Logger.h  MockLogger.h  TaskScheduler.h
src/: TaskScheduler.cpp  main.cpp
tests/: LoggerTests.cpp  TaskSchedulerTests.cpp
